Fix navbar separator on mobile sizes
Before, the separator stayed as vertical line in mobile orientation.
Now, it's replaced with dropdown separator (i.e., horizontal line).

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -69,6 +69,10 @@ li > .dropdown-toggle:focus{
     background-color: var(--secondary-color) !important;
 }
 
+.dropdown-divider {
+	border-top: 1px solid var(--lt-color-border-dark);
+}
+
 #search {
     border-radius: 1rem !important;
     background-color: var(--secondary-color);
